app/assets/stylesheets/external/vcwiz.scss
/* ... */
.saved-auto-input {
  .typeahead {
    .react-autosuggest__input {
      margin-bottom: 0;

      &--open {
        border-bottom: 0;
      }
    }
  }
}

.typeahead {
  .react-autosuggest__suggestions-container--open {
    ul.react-autosuggest__suggestions-list {
      list-style-type: none;
      margin-bottom: 0;
      margin-left: 0;
    }
  }

  .react-autosuggest__suggestions-container {
    padding-top: 20px;
  }

  .react-autosuggest__suggestion {
    cursor: pointer;
  }
}

.typeahead-tether {
  z-index: 2;

  .react-autosuggest__suggestions-container {
    display: none;
  }

  .react-autosuggest__suggestions-container--open {
    display: initial;
    position: absolute;
    background-color: $white;
    padding-top: 0;
    width: 100%;
    box-shadow: 0 0 1px 1px $grey inset;

    li.react-autosuggest__suggestion {
      padding: 0.3em;
      width: 98%;
      margin: auto;
      font-size: 1.1em;

      &:not(:last-child) {
        border-bottom: 1px solid $light-grey;
      }

      &:hover {
        background-color: $lightest-grey;
      }
    }
  }
}

.track-option {
  &-added, &-intro {
    color: $success;
  }

  &-waiting, &-respond {
    color: $purple;
  }

  &-pitch, &-interested {
    color: $green;
  }

  &-pass, &-removed {
    color: $red;
  }
}

.track-select-tether {
  .Select-menu-outer {
    width: calc(100% - 1em);
    border-radius: 5%;
    overflow: hidden;
    margin-left: 0.5em;
  }

  .Select-menu {
    @extend .scroll-shadow;
    overflow-y: scroll;

    &::-webkit-scrollbar {
      -webkit-appearance: none;
      width: 7px;
    }

    &::-webkit-scrollbar-thumb {
      border-radius: 4px;
      background-color: rgba(0, 0, 0, .5);
      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
    }
  }
}

.track-button {
  .Select-control {
    cursor: pointer;
  }

  .Select-control, .is-open > .Select-control {
    border-radius: 40px;
  }

  .Select-placeholder, .Select--single > .Select-control .Select-value {
    text-align: center;
  }

  .Select-placeholder {
    font-weight: bold;
    color: $white;
    background-color: $success;
    text-transform: uppercase;
  }
}

.partner-tab {
  .loading {
    margin: auto;
    width: 200px;
  }

  .line-icon {
    margin-right: 10px;
  }

  h5 {
    color: $grey;
  }

  .company-name, .post-name {
    font-weight: bold;
    font-size: medium;

    a {
      color: black;
    }
  }

  .company-description, .post-description {
    color: $grey;
    font-size: small;
    margin-bottom: 15px;
  }

  .tweet {
    margin-bottom: 1em;

    .line-icon {
      margin-right: 5px;
    }
  }

  .interactions {
    font-weight: bold;

    span:last-child {
      display: inline-block;
      margin-bottom: 1em;
    }

    .intro-path {
      margin-bottom: 1em;

      &.direct {
        display: inline-flex;
      }
    }
  }

  @include on-mobile {
    h5 {
      margin-bottom: 1em;
    }

    .partner-heading {
      .inline-image {
        display: block;
      }

      .track-button {
        margin-bottom: 2em;
      }
    }
  }
}

.overlay-modal-wrapper {
  position: relative;
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  height: 100%;
}

.overlay-modal {
  background-color: $lightest-grey;
  min-height: 100%;
}

.overlay-modal, .modal-page {
  &-top {
    padding: 30px 40px;
    background-color: $white;

    .inline-image {
      border: 1px solid $mid-grey;

      img {
        border-radius: 0;
      }
    }
  }

  &-bottom {
    padding: 3% 30px 30px;
  }

  p {
    margin-bottom: 0;
  }

  a {
    font-weight: 500;
    color: $success-dark;
  }

  .title {
    text-align: center;
  }

  .muted {
    color: $grey;
  }

  @include headings;

  span.dot {
    margin-right: 5px;
    margin-left: 5px;
  }

  .row {
    max-width: unset;
    margin-right: unset;
    margin-left: unset;
  }
}

.welcome-modal {
  span.highlight {
    font-weight: bold;
  }

  &-top {
    padding: 20px 30px;
  }

  &-bottom {
    padding-top: 15px;

    h3, h4, h5 {
      text-align: center;
    }

    .slick-list {
      height: 62vh;
      min-height: 500px;
      max-height: 600px;
    }

    .slide-1 {
      h3 {
        margin-bottom: 0.75em;
        margin-top: 0.5em;
      }

      h4 {
        margin-bottom: 2em;
      }
    }

    .slide-2, .slide-3 {
      h3 {
        text-align: left;
        margin-bottom: 1em;
        margin-top: 0.25em;
      }

      h5 {
        margin-top: 0.5em;
      }

      .tutorials-wrapper {
        display: flex;
        justify-content: center;

        .tutorials {
          margin-left: 1em;
          margin-right: 1em;
        }

        .caret {
          width: 50px;
          background: url(image_path("icons/arrow.png")) no-repeat center;
          background-size: contain;
        }
      }
    }

    .large-icon {
      text-align: center;

      img {
        width: 35%;
        margin: auto;
      }
    }

    .slick-prev:before, .slick-next:before {
      color: $black;
      font-size: 40px;
    }

    .slick-prev, .slick-next {
      height: 40px;
      width: 40px;
    }

    .slick-active, .slick-dots li button, .slick-dots li button:before {
      height: 25px;
      width: 25px;
    }

    .slick-dots {
      bottom: -3em;

      li button:before {
        font-size: 25px;
        line-height: 25px;
      }

      li.slick-active button:before {
        color: $success-dark;
      }
    }
  }
}

.email_integration-modal {
  @include small-modal;

  &-bottom {
    .info {
      h4 {
        margin-top: 1em;
      }

      .button {
        margin-top: 1.5em;
      }
    }
  }
}

.settings-modal {
  @include small-modal;

  &-top {
    padding: 20px 30px 15px;
  }

  &-bottom {
    .buttons {
      .columns {
        text-align: center;
      }
    }

    .fields {
      .row {
        margin-top: 1.5em;
      }

      input {
        margin-bottom: 0;
      }
    }
  }
}
/* ... */

